# ope_matrices

./: README.md  pyproject.toml
ope_matrices/: __init__.py  blur_sobel_filters.py  pca_image_patches.py
