[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ope-matrices"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "opencv-python>=4.11.0.86",
    "pyqt5>=5.15.11",
    "scikit-learn>=1.7.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ope_matrices*"]

[tool.setuptools.package-data]
"ope_matrices" = ["*.jpg", "*.png", "*.jpeg"]
